<resources>
    <string name="app_name">Eureka</string>
    <string name="app_key">arnold.key</string>

    <string name="google_api_key">AIzaSyClUfFhzPVyE5NW-XcXDGA32JPB7Gcxh6Y</string>
    <string name="facebook_app_id">574162382722993</string> //facebook

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_shoppingCart">Shopping Cart</string>
    <string name="hint_contactNo">Contact Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="forgot_password"><u>FORGOT YOUR PASSWORD?</u></string>
    <string name="welcome">Welcome to the Lunch Order App</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_activity_canteen">Canteen Details</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_favourites">FavouritesActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_food_list_fragment">FoodListFragment</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="title_activity_hawker_main">HawkerMainActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home_page2">HomePage2Activity</string>

    <string-array name="drawerList">
        <item>My Profile</item>
        <item>Menu</item>
        <item>Cart</item>
        <item>Payment</item>
        <item>Status</item>
        <item>Settings</item>
        <item>User Guide</item>
        <item>Logout</item>
    </string-array>

    <string-array name="tabList">
        <item>Orders</item>
        <item>Canteen</item>
        <item>Favourites</item>
    </string-array>
    <string name="title_activity_homepage2">Homepage2Activity</string>
    <string name="title_activity_canteen_selector">CanteenSelectorActivity</string>
    <string name="title_activity_food_menu">FoodMenuActivity</string>
    <string name="title_activity_stall_selector">StallSelectorActivity</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
</resources>
