<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_smu_bg"
    android:backgroundTint="#77c9cece"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <!-- Register option -->
        <Button
            android:id="@+id/register_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sign Up"/>

        <!-- Login option -->
        <Button
            android:id="@+id/login_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToLogin"
            android:text="Login"/>
    </LinearLayout>

    <!--Title-->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:padding="5sp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <!-- Username -->
    <EditText
        android:id="@+id/signup_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autoText="false"
        android:background="#78ffffff"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxWidth="300dp"
        android:padding="10dp"
        android:singleLine="true" />

    <!-- password -->
    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autoText="false"
        android:background="#78ffffff"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxWidth="300dp"
        android:padding="10dp"
        android:singleLine="true" />

    <!-- email -->
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autoText="false"
        android:background="#78ffffff"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:maxWidth="300dp"
        android:padding="10dp"
        android:singleLine="true" />

    <!-- phone number  -->
    <EditText
        android:id="@+id/signup_contactNo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autoText="false"
        android:background="#78ffffff"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:hint="@string/hint_contactNo"
        android:inputType="text"
        android:maxWidth="300dp"
        android:padding="10dp"
        android:singleLine="true" />

    <!--Signup button-->
    <CheckBox
        android:id="@+id/signup_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Terms and Conditions" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/teal_button"
        android:onClick="onSignUpButtonClick"
        android:text="@string/button_signup"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:typeface="sans"
        android:visibility="visible"/>

</LinearLayout>